
Changes for bugfix release 1.0.4:

* fixed bug NoDisplayFooterInActionLink
  fix contributed by JuanMtnezPineda
* QuoteHtml, GetPageLockLink, GetAdminBar: move function to allow defered
  compilation again
* fixed bug: make GotoBars at top and bottom look the same on the edit page

Changes for bugfix release 1.0.3 (September 12, 2007):

* fixed bug IntermapedGifNotInlinedForLink
* fixed bug AuthenicationFailedNoHeader
* fixed bug BacklinksMissesSomeFreeLinks
  fix contributed by BrianHunter
* fixed bug EmptyTableElements
  fix contributed by StefanTrcek
* fixed bug MiscTranslation
  fix contributed by JuanMtnezPineda
* added more translation strings
* DoRC: when using rcidonly text was quoted too much
  noticed by CliffordAdams (bug was introduced with XssFix in 1.0.1)
* fixed bug UrlEncoding
  fix contributed by StefanTrcek

Changes for bugfix release 1.0.2 (August 26, 2007):

* added CREDITS and Changelog (forgot them in 1.0.1)
* make .zip distribution for Windows users again (forgot it for 1.0.1)
* fixed range in SplitUrlPunct()
* fixed bug ActionEqIndexAndEmbedEqOne
  same problem with other actions and parameter embed
* moved CSS class wikilinefooter (for <hr>) inside class wikifooter
* fixed bug ClassWikifooterMissing
* fixed bug VariableParseParasYieldsOddOutput
  fix contributed by Trent, simplified
* fixed bug UploadTranslation
  fix contributed by UngarPeter
* added patch RobotsNoFollow version D
  contributed by Trent with suggestion by UngarPeter
  based on work by TomScanlan
* fixed bug ActionLinksExistsZeroSubPage
    aka bug RequestedLinks
  based on fix by GyPark and MikeCastle
* fixed bug ImageExtensionsCaseSensitive
    aka bug UppercaseImageUploadCausesProblemsWithDisplay
* added ico/tif/tiff to ImageExtensions
* fixed bug CamelCaseImageUploadCausesProblemsWithDisplay
  with suggestion from DavidClaughton

Changes for bugfix release 1.0.1 (July 9, 2007):

* SECURITY: fix cross-site scripting vulnerability (CVE-2004-1397)