@@ -6,6 +6,7 @@ Changes for bugfix release 1.0.4:
 * QuoteHtml, GetPageLockLink, GetAdminBar: move function to allow defered
   compilation again
 * fixed bug: make GotoBars at top and bottom look the same on the edit page
+* added some missing ScriptLinkChar() instead of "?"
 
 Changes for bugfix release 1.0.3 (September 12, 2007):
 
